--- a/index.html
+++ b/index.html
@@ -721,21 +721,27 @@
               "@type": "Offer",
               "itemOffered": {
                 "@type": "SoftwareApplication",
-                "name": "Emergency Schedule Generation"
+                "name": "Emergency Schedule Generation",
+                "applicationCategory": "EducationalApplication",
+                "operatingSystem": ["iOS", "iPadOS"]
               }
             },
             {
               "@type": "Offer", 
               "itemOffered": {
                 "@type": "SoftwareApplication",
-                "name": "A/B Rotation Management"
+                "name": "A/B Rotation Management",
+                "applicationCategory": "EducationalApplication",
+                "operatingSystem": ["iOS", "iPadOS"]
               }
             },
             {
               "@type": "Offer",
               "itemOffered": {
                 "@type": "SoftwareApplication", 
-                "name": "QR Code Sharing"
+                "name": "QR Code Sharing",
+                "applicationCategory": "EducationalApplication",
+                "operatingSystem": ["iOS", "iPadOS"]
               }
             }
           ]
