--- a/index.html
+++ b/index.html
@@ -925,7 +925,8 @@
         "itemReviewed": {
           "@type": "SoftwareApplication",
           "name": "iSchedulEDU",
-          "applicationCategory": "EducationalApplication"
+          "applicationCategory": "EducationalApplication",
+          "operatingSystem": ["iOS", "iPadOS"]
         },
         "reviewRating": {
           "@type": "Rating",
