fixed titles of pages to be less than 70 characters
fixed titles of pages to be less than 70 characters

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/lovable-uploads/ischeduledu-app-logo-elementary-teacher-schedule-planner.png" />
-    <link rel="apple-touch-icon" href="/lovable-uploads/ischeduledu-app-logo-elementary-teacher-schedule-planner.png" />
+    <link rel="icon" type="image/png" href="/lovable-uploads/ischeduledu-app-logo-elementary-teacher-schedule-planner.png?v=2" />
+    <link rel="apple-touch-icon" href="/lovable-uploads/ischeduledu-app-logo-elementary-teacher-schedule-planner.png?v=2" />
+    <link rel="shortcut icon" href="/lovable-uploads/ischeduledu-app-logo-elementary-teacher-schedule-planner.png?v=2" />
+    <link rel="icon" sizes="32x32" href="/lovable-uploads/ischeduledu-app-logo-elementary-teacher-schedule-planner.png?v=2" />
+    <link rel="icon" sizes="192x192" href="/lovable-uploads/ischeduledu-app-logo-elementary-teacher-schedule-planner.png?v=2" />
     
     <!-- Preload critical images -->
     <link rel="preload" as="image" href="/lovable-uploads/ischeduledu-app-logo-elementary-teacher-schedule-planner.png" />
