fixed 404 redirect errors for google search console and some canonical url issue
fixed 404 redirect errors for google search console and some hackerchoice canonical url

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <title>iSchedulEDU - Teacher Schedule Generator</title>
     <meta name="title" content="iSchedulEDU - Teacher Schedule Generator">
     <meta name="description" content="Create emergency schedules in under 2 minutes. Perfect for fire drills, weather delays, and substitute teachers. Free to start.">
+    <link rel="canonical" href="https://ischeduledu.app" />
     <meta name="keywords" content="teacher schedule app, emergency schedule generator, equal time lesson planning, fire drill schedule, substitute teacher schedule, classroom scheduling app, school schedule generator, lesson planning app, teacher tools, educational technology, classroom management">
     
     <!-- Critical CSS for above-the-fold content -->
