fixed background loading gradient to match the light and dark mode of the website background so no flash happens
fixed background loading gradient to match light and dark mode of website background so no flash happens

--- a/index.html
+++ b/index.html
@@ -39,8 +39,12 @@
       body { 
         margin: 0; 
         font-family: system-ui, -apple-system, sans-serif; 
-        background: linear-gradient(to bottom, #0FA0CE, #1a2233, #101624);
-        color: #ffffff;
+        background: linear-gradient(to bottom, #E6F3FF, #ffffff, #F0F8FF);
+        color: #1f2937;
+      }
+      .dark body {
+        background: linear-gradient(to bottom, #111827, #111827, #1f2937);
+        color: #f9fafb;
       }
       .sr-only { 
         position: absolute; 
