404 redirects, fixed logo on importschedule page
404 redirects, fixed logo on importschedule page

--- a/public/404.html
+++ b/public/404.html
@@ -78,7 +78,8 @@
             '/rotating-schedule-guide',
             '/custom-schedule-guide',
             '/strategy-review',
-            '/competitor-analysis'
+            '/competitor-analysis',
+            '/import'
         ];
         
         // Check if this is a valid route that should be handled by SPA
