--- a/index.html
+++ b/index.html
@@ -178,6 +178,18 @@
         font-size: 3rem;
         line-height: 1;
       }
+      .text-6xl {
+        font-size: 3.75rem;
+        line-height: 1;
+      }
+      .text-8xl {
+        font-size: 6rem;
+        line-height: 1;
+      }
+      .text-9xl {
+        font-size: 8rem;
+        line-height: 1;
+      }
       .font-euclid {
         font-family: "Euclid Circular B", system-ui, sans-serif;
       }
@@ -406,6 +418,8 @@
     <!-- Euclid Circular B Font -->
     <link rel="preload" href="/fonts/Euclid Circular B Regular.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="/fonts/Euclid Circular B Bold.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/Euclid Circular B Medium.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/Euclid Circular B SemiBold.woff2" as="font" type="font/woff2" crossorigin>
     <style>
       @font-face {
         font-family: 'Euclid Circular B';
